--- a/educaUS_front/educaUS/src/app/perfil/perfil.component.css
+++ b/educaUS_front/educaUS/src/app/perfil/perfil.component.css
@@ -83,3 +83,17 @@
     text-align: center;
     
 }
+
+.titulo-centro{
+    margin-left: 31%;
+    font-size: 25pt;
+    }
+    
+    .modalB{
+        width: 200px;
+    }
+   
+    .bordaN{
+        border-bottom-left-radius: 15%;
+        border-bottom-right-radius: 15%;
+    }
