--- a/educaUS_front/educaUS/src/app/feed/feed.component.html
+++ b/educaUS_front/educaUS/src/app/feed/feed.component.html
@@ -168,17 +168,54 @@
     </div>
 
 
-    <!-- Botão para acionar modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#novoPost">
-    Abrir modal de demonstração
-  </button>
+       <!-- Botão para acionar modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#novoTema">
+    
+</button>
+
+<!-- Modal novo tema-->
+<div class="modal fade " id="novoTema" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header bg-educa text-white bordaN">
+        <h4 class="modal-title titulo-centro font-weight-bold" id="TituloModalCentralizado">Novo Tema</h4>
+        
+
+        <button type="button" class="close ml-auto text-white" data-dismiss="modal" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <form>
+              
+              <div class="form-group">
+                <h3 class="text-center font-weight-bold color">Tema:</h3>
+                <div class="row d-flex justify-content-center">
+                  <div class="col-sm-10">
+                      <input type="" class="form-control align-items-center" id="" placeholder="#novo tema">
+                    </div>
+                </div>
+                
+              </div>
+            </form>
+
+            
+      </div>
+      <div class="d-flex justify-content-center mb-3 ">
+        <button type="button" class="btn btn-danger mr-4 btn-lg modalB" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="text-white btn btn-lg modalB" style="background-color:#004AAD ;">Publicar</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!--/Modal novo tema-->
   
   <!-- Modal -->
-  <div class="modal fade" id="novoPost" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered " role="document">
+  <div class="modal fade " id="novoPost" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
-        <div class="modal-header bg-educa text-white">
-          <h4 class="modal-title titulo-centro " id="TituloModalCentralizado">Nova Postagem</h4>
+        <div class="modal-header bg-educa text-white bordaN">
+          <h4 class="modal-title titulo-centro font-weight-bold" id="TituloModalCentralizado">Novo Post</h4>
           
 
           <button type="button" class="close ml-auto text-white" data-dismiss="modal" aria-label="Fechar">
@@ -189,7 +226,7 @@
             <form>
                 
                 <div class="form-group row align-items-baseline">
-                  <label for="tema" class="col-sm-2 col-form-label color"><h3 class="text-align">Tema:</h3></label>
+                  <label for="tema" class="col-sm-2 col-form-label color"><h3 class="text-align font-weight-bold">Tema:</h3></label>
                   <div class="col-sm-10">
                     <input type="" class="form-control" id="" placeholder="#tema">
                   </div>
@@ -198,9 +235,9 @@
 
               <textarea style="resize: none;" class="form-control" name="" id="" cols="30" rows="10"></textarea>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-          <button type="button" class="text-white btn" style="background-color:#004AAD ;">Publicar</button>
+        <div class="d-flex justify-content-center mb-3 ">
+          <button type="button" class="btn btn-danger mr-4 btn-lg modalB" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="text-white btn btn-lg modalB" style="background-color:#004AAD ;">Publicar</button>
         </div>
       </div>
     </div>
